--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
     <header class="header">
       <img src="картинка.png" alt="avatar" class="header__avatar"  height="200"width="200"/>
-      <h1 class="header__title">Анастасия Иванова</h1>
+      <h1 class="header__title">Иванова Анастасия</h1>
+      <h2 class="header__title">Константиновна</h2>
       <h3 class="header__subtitle">будущий QA </h3>
     </header>
     <main>
